# p2-computer-vision-superestrellas

./: .gitignore  README.md  pyproject.toml
models/: small_cnn.pth
notebook/: challenge.ipynb  report.ipynb
